--- a/config-yml/field.field.node.publication.body.yml
+++ b/config-yml/field.field.node.publication.body.yml
@@ -11,12 +11,12 @@ id: node.publication.body
 field_name: body
 entity_type: node
 bundle: publication
-label: Credit
+label: Subject/Blurb
 description: ''
 required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  display_summary: true
+  display_summary: false
 field_type: text_with_summary
