--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.publication.body
     - field.field.node.publication.field_first_issue
+    - field.field.node.publication.field_issn
     - field.field.node.publication.field_last_issue
     - field.field.node.publication.field_place_of_publication
     - node.type.publication
@@ -21,7 +22,7 @@ third_party_settings:
         - field_first_issue
         - field_last_issue
       parent_name: ''
-      weight: 2
+      weight: 3
       format_type: details
       format_settings:
         id: ''
@@ -29,6 +30,17 @@ third_party_settings:
         open: false
         required_fields: true
       label: 'Date of Publication'
+    group_geographic_location:
+      children: {  }
+      parent_name: ''
+      weight: 2
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: true
+        required_fields: true
+      label: 'Geographic Location'
 id: node.publication.default
 targetEntityType: node
 bundle: publication
@@ -36,7 +48,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 1
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -45,7 +57,7 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 5
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -55,6 +67,14 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
+  field_issn:
+    weight: 5
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_last_issue:
     weight: 12
     settings: {  }
@@ -62,7 +82,7 @@ content:
     type: datetime_default
     region: content
   field_place_of_publication:
-    weight: 3
+    weight: 1
     settings:
       default_country: null
     third_party_settings: {  }
@@ -70,7 +90,7 @@ content:
     region: content
   path:
     type: path
-    weight: 8
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -78,21 +98,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 6
+    weight: 8
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 11
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 7
+    weight: 9
     region: content
     third_party_settings: {  }
   title:
@@ -105,7 +125,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 4
+    weight: 6
     settings:
       match_operator: CONTAINS
       size: 60
