--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -4,10 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.node.publication.body
+    - field.field.node.publication.field_city_town
     - field.field.node.publication.field_first_issue
     - field.field.node.publication.field_issn
     - field.field.node.publication.field_last_issue
     - field.field.node.publication.field_place_of_publication
+    - field.field.node.publication.field_province_state
     - node.type.publication
   module:
     - address
@@ -25,6 +27,14 @@ content:
     weight: 101
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_city_town:
+    weight: 108
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_first_issue:
     weight: 104
@@ -58,6 +68,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: address_default
+    region: content
+  field_province_state:
+    weight: 107
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   links:
     weight: 100
