--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -4,12 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.node.publication.body
+    - field.field.node.publication.field_abbreviated_title
     - field.field.node.publication.field_city_town
     - field.field.node.publication.field_first_issue
     - field.field.node.publication.field_issn
     - field.field.node.publication.field_last_issue
     - field.field.node.publication.field_place_of_publication
     - field.field.node.publication.field_province_state
+    - field.field.node.publication.field_publisher
     - node.type.publication
   module:
     - address
@@ -24,7 +26,7 @@ third_party_settings:
         - field_first_issue
         - field_last_issue
       parent_name: ''
-      weight: 3
+      weight: 5
       format_type: details
       format_settings:
         label: 'Date of Publication'
@@ -38,7 +40,7 @@ third_party_settings:
         - field_province_state
         - field_city_town
       parent_name: ''
-      weight: 2
+      weight: 3
       format_type: details
       format_settings:
         id: ''
@@ -53,7 +55,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 4
+    weight: 6
     settings:
       rows: 9
       summary_rows: 3
@@ -62,10 +64,18 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_abbreviated_title:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_city_town:
     weight: 27
     settings:
@@ -100,7 +110,7 @@ content:
     type: datetime_default
     region: content
   field_issn:
-    weight: 5
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -114,7 +124,7 @@ content:
     type: datetime_default
     region: content
   field_place_of_publication:
-    weight: 1
+    weight: 2
     settings:
       default_country: null
     third_party_settings: {  }
@@ -129,9 +139,18 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_publisher:
+    weight: 4
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   path:
     type: path
-    weight: 10
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -139,21 +158,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 10
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 11
+    weight: 13
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 11
     region: content
     third_party_settings: {  }
   title:
@@ -166,7 +185,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
