--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -4,12 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.node.publication.body
+    - field.field.node.publication.field_abbreviated_title
     - field.field.node.publication.field_city_town
     - field.field.node.publication.field_first_issue
     - field.field.node.publication.field_issn
     - field.field.node.publication.field_last_issue
     - field.field.node.publication.field_place_of_publication
     - field.field.node.publication.field_province_state
+    - field.field.node.publication.field_publisher
     - node.type.publication
   module:
     - address
@@ -27,6 +29,14 @@ content:
     weight: 101
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_abbreviated_title:
+    weight: 109
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_city_town:
     weight: 108
@@ -71,6 +81,14 @@ content:
     region: content
   field_province_state:
     weight: 107
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_publisher:
+    weight: 110
     label: above
     settings:
       link: true
