--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.publication.field_abbreviated_title
     - field.field.node.publication.field_city_town
     - field.field.node.publication.field_first_issue
+    - field.field.node.publication.field_frequency
     - field.field.node.publication.field_issn
     - field.field.node.publication.field_last_issue
     - field.field.node.publication.field_place_of_publication
@@ -54,6 +55,14 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
+    region: content
+  field_frequency:
+    weight: 111
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_issn:
     weight: 106
