Form display field placeholder text

--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -154,7 +154,7 @@ content:
     settings:
       match_operator: CONTAINS
       size: 60
-      placeholder: ''
+      placeholder: 'Autocomplete suggestions may appear as you type'
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
