--- a/config-yml/newspapers_lib_unb_ca.settings.yml
+++ b/config-yml/newspapers_lib_unb_ca.settings.yml
@@ -1,18 +1,25 @@
-favicon:
-  mimetype: image/vnd.microsoft.icon
-  path: ''
-  url: 'http://192.168.99.100:3095/themes/contrib/unb_lib_theme/favicon.ico'
-  use_default: true
-features:
-  comment_user_picture: true
-  comment_user_verification: true
-  favicon: true
-  node_user_picture: true
-logo:
-  path: ''
-  url: ''
-  use_default: true
 schemas:
   bootstrap: 8000
   unb_lib_theme: 8000
   newspapers_lib_unb_ca: 8000
+favicon:
+  mimetype: image/vnd.microsoft.icon
+  path: ''
+  url: 'http://192.168.99.100:3095/themes/contrib/unb_lib_theme/favicon.ico'
+  use_default: 1
+features:
+  comment_user_picture: 1
+  comment_user_verification: 1
+  favicon: 1
+  node_user_picture: 1
+logo:
+  path: ''
+  url: ''
+  use_default: 1
+table_responsive: '-1'
+modal_enabled: 0
+tooltip_enabled: 0
+table: ''
+header_uri: 'https://lib.unb.ca/core/inc-2015/head-nav.php'
+header_refresh_seconds: '900'
+header_write_path: /app/html/sites/default/files/head-nav.html.twig
