--- a/config-yml/field.field.node.publication.field_frequency.yml
+++ b/config-yml/field.field.node.publication.field_frequency.yml
@@ -11,7 +11,7 @@ field_name: field_frequency
 entity_type: node
 bundle: publication
 label: 'Frequency of publication'
-description: ''
+description: "Examples: <kbd>weekly</kbd>, <kbd>monthly</kbd><br>\r\n<i>Suggested values may pop up as you type</i>"
 required: false
 translatable: false
 default_value: {  }
