--- a/config-yml/field.field.node.publication.field_province_state.yml
+++ b/config-yml/field.field.node.publication.field_province_state.yml
@@ -11,7 +11,7 @@ field_name: field_province_state
 entity_type: node
 bundle: publication
 label: Province/State
-description: ''
+description: "Examples: New Brunswick, Maine<br>\r\n<i>Suggested values may pop up as you type</i>"
 required: false
 translatable: false
 default_value: {  }
