--- a/config-yml/field.field.node.publication.field_succeeding_title.yml
+++ b/config-yml/field.field.node.publication.field_succeeding_title.yml
@@ -10,7 +10,7 @@ field_name: field_succeeding_title
 entity_type: node
 bundle: publication
 label: 'Continued by'
-description: ''
+description: 'i.e. succeeding title'
 required: false
 translatable: false
 default_value: {  }
