Switch Publication Frequency to select widget

--- a/config-yml/taxonomy.vocabulary.frequency.yml
+++ b/config-yml/taxonomy.vocabulary.frequency.yml
@@ -4,6 +4,6 @@ status: true
 dependencies: {  }
 name: Frequency
 vid: frequency
-description: ''
+description: 'How often the newspaper was published'
 hierarchy: 0
 weight: 0
