--- a/config-yml/field.field.node.publication.field_geo_coverage_province.yml
+++ b/config-yml/field.field.node.publication.field_geo_coverage_province.yml
@@ -1,17 +1,17 @@
-uuid: 0d333546-6eaa-4df0-bee6-8b55b8dd119c
+uuid: 87d04cb9-0b5f-4098-a703-f1f7f52e7d68
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_city_town
+    - field.storage.node.field_geo_coverage_province
     - node.type.publication
-    - taxonomy.vocabulary.city
-id: node.publication.field_city_town
-field_name: field_city_town
+    - taxonomy.vocabulary.province
+id: node.publication.field_geo_coverage_province
+field_name: field_geo_coverage_province
 entity_type: node
 bundle: publication
-label: City/Town
-description: ''
+label: Province/State
+description: '<i>Suggested values may pop up as you type.</i> <b>City</b> <i>is a dependent field.</i>'
 required: false
 translatable: false
 default_value: {  }
@@ -20,7 +20,7 @@ settings:
   handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      city: city
+      province: province
     sort:
       field: name
       direction: asc
