--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -29,7 +29,7 @@ third_party_settings:
         - field_first_issue
         - field_last_issue
       parent_name: ''
-      weight: 7
+      weight: 5
       format_type: details
       format_settings:
         label: 'Date of Publication'
@@ -90,7 +90,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 9
+    weight: 7
     settings:
       rows: 9
       summary_rows: 3
@@ -99,18 +99,10 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 13
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_credit:
-    weight: 11
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_first_issue:
     weight: 20
     settings: {  }
@@ -118,7 +110,7 @@ content:
     type: datetime_default
     region: content
   field_frequency:
-    weight: 8
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -161,7 +153,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_issn:
-    weight: 10
+    weight: 8
     settings:
       size: 60
       placeholder: ''
@@ -221,7 +213,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_publisher:
-    weight: 6
+    weight: 4
     settings:
       match_operator: CONTAINS
       size: 60
@@ -240,7 +232,7 @@ content:
     region: content
   path:
     type: path
-    weight: 16
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -248,21 +240,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 14
+    weight: 11
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 17
+    weight: 14
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 12
     region: content
     third_party_settings: {  }
   title:
@@ -275,11 +267,12 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 12
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
     region: content
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_credit: true
