Change custom Newspapers core module date dependency to datetime_range

--- a/custom/modules/newspapers_core/newspapers_core.info.yml
+++ b/custom/modules/newspapers_core/newspapers_core.info.yml
@@ -4,5 +4,5 @@ description: Newspaper Core Functions
 core: 8.x
 package: Newspapers
 dependencies:
-  - datetime
+  - datetime_range
   - conditional_fields
