Define core js and css libraries

--- a/custom/modules/newspapers_core/newspapers_core.libraries.yml
+++ b/custom/modules/newspapers_core/newspapers_core.libraries.yml
@@ -1,5 +1,8 @@
-customjs:
+pubform:
+  css:
+    theme:
+      css/pub-form.css: {}
   js:
-    js/newspapers_core.js: {}
+    js/pub-form.js: {}
   dependencies:
      - core/jquery
