--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -5,12 +5,18 @@ dependencies:
   config:
     - field.field.node.publication.body
     - field.field.node.publication.field_credit
-    - field.field.node.publication.field_first_issue
+    - field.field.node.publication.field_first_issue_approx_date
+    - field.field.node.publication.field_first_issue_date
+    - field.field.node.publication.field_first_issue_date_is_approx
+    - field.field.node.publication.field_first_issue_sort_date
     - field.field.node.publication.field_frequency
     - field.field.node.publication.field_geo_coverage_city
     - field.field.node.publication.field_geo_coverage_province
     - field.field.node.publication.field_issn
-    - field.field.node.publication.field_last_issue
+    - field.field.node.publication.field_last_issue_approx_date
+    - field.field.node.publication.field_last_issue_date
+    - field.field.node.publication.field_last_issue_date_is_approx
+    - field.field.node.publication.field_last_issue_sort_date
     - field.field.node.publication.field_previous_title
     - field.field.node.publication.field_publication_place_city
     - field.field.node.publication.field_publication_place_province
@@ -19,6 +25,7 @@ dependencies:
     - node.type.publication
   module:
     - datetime
+    - datetime_range
     - text
     - user
 id: node.publication.default
@@ -29,20 +36,38 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 101
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     region: content
   field_credit:
-    weight: 112
+    weight: 5
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
-  field_first_issue:
-    weight: 104
+  field_first_issue_approx_date:
+    weight: 12
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_first_issue_date:
+    weight: 19
+    label: above
+    settings:
+      separator: '-'
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: daterange_default
+    region: content
+  field_first_issue_sort_date:
+    weight: 20
     label: above
     settings:
       format_type: medium
@@ -51,7 +76,7 @@ content:
     type: datetime_default
     region: content
   field_frequency:
-    weight: 111
+    weight: 4
     label: above
     settings:
       link: true
@@ -59,7 +84,7 @@ content:
     type: entity_reference_label
     region: content
   field_geo_coverage_city:
-    weight: 118
+    weight: 11
     label: above
     settings:
       link: true
@@ -67,7 +92,7 @@ content:
     type: entity_reference_label
     region: content
   field_geo_coverage_province:
-    weight: 116
+    weight: 9
     label: above
     settings:
       link: true
@@ -75,15 +100,33 @@ content:
     type: entity_reference_label
     region: content
   field_issn:
-    weight: 106
+    weight: 2
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
-  field_last_issue:
-    weight: 105
+  field_last_issue_approx_date:
+    weight: 14
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_last_issue_date:
+    weight: 18
+    label: above
+    settings:
+      separator: '-'
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: daterange_default
+    region: content
+  field_last_issue_sort_date:
+    weight: 21
     label: above
     settings:
       format_type: medium
@@ -92,7 +135,7 @@ content:
     type: datetime_default
     region: content
   field_previous_title:
-    weight: 113
+    weight: 6
     label: above
     settings:
       link: true
@@ -100,7 +143,7 @@ content:
     type: entity_reference_label
     region: content
   field_publication_place_city:
-    weight: 117
+    weight: 10
     label: above
     settings:
       link: true
@@ -108,7 +151,7 @@ content:
     type: entity_reference_label
     region: content
   field_publication_place_province:
-    weight: 115
+    weight: 8
     label: above
     settings:
       link: true
@@ -116,7 +159,7 @@ content:
     type: entity_reference_label
     region: content
   field_publisher:
-    weight: 110
+    weight: 3
     label: above
     settings:
       link: true
@@ -124,7 +167,7 @@ content:
     type: entity_reference_label
     region: content
   field_succeeding_title:
-    weight: 114
+    weight: 7
     label: above
     settings:
       link: true
@@ -132,6 +175,10 @@ content:
     type: entity_reference_label
     region: content
   links:
-    weight: 100
+    weight: 0
     region: content
-hidden: {  }
+    settings: {  }
+    third_party_settings: {  }
+hidden:
+  field_first_issue_date_is_approx: true
+  field_last_issue_date_is_approx: true
