--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -24,7 +24,6 @@ dependencies:
     - field.field.node.publication.field_succeeding_title
     - node.type.publication
   module:
-    - datetime
     - datetime_range
     - field_group
     - path
@@ -113,6 +112,14 @@ content:
     weight: 10
     region: content
     settings: {  }
+    third_party_settings: {  }
+  field_credit:
+    type: string_textfield
+    weight: 15
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   field_first_issue_approx_date:
     weight: 38
@@ -249,12 +256,6 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
-  field_last_issue_sort_date:
-    weight: 42
-    settings: {  }
-    third_party_settings: {  }
-    type: datetime_default
-    region: content
   field_previous_title:
     weight: 8
     settings:
@@ -364,5 +365,5 @@ content:
     region: content
     third_party_settings: {  }
 hidden:
-  field_credit: true
   field_first_issue_sort_date: true
+  field_last_issue_sort_date: true
