--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -24,7 +24,6 @@ dependencies:
     - field.field.node.publication.field_succeeding_title
     - node.type.publication
   module:
-    - datetime
     - datetime_range
     - text
     - user
@@ -57,7 +56,7 @@ content:
     type: string
     region: content
   field_first_issue_date:
-    weight: 19
+    weight: 15
     label: above
     settings:
       separator: '-'
@@ -65,15 +64,6 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: daterange_default
-    region: content
-  field_first_issue_sort_date:
-    weight: 20
-    label: above
-    settings:
-      format_type: medium
-      timezone_override: ''
-    third_party_settings: {  }
-    type: datetime_default
     region: content
   field_frequency:
     weight: 4
@@ -108,7 +98,7 @@ content:
     type: string
     region: content
   field_last_issue_approx_date:
-    weight: 14
+    weight: 13
     label: above
     settings:
       link_to_entity: false
@@ -116,7 +106,7 @@ content:
     type: string
     region: content
   field_last_issue_date:
-    weight: 18
+    weight: 14
     label: above
     settings:
       separator: '-'
@@ -124,15 +114,6 @@ content:
       timezone_override: ''
     third_party_settings: {  }
     type: daterange_default
-    region: content
-  field_last_issue_sort_date:
-    weight: 21
-    label: above
-    settings:
-      format_type: medium
-      timezone_override: ''
-    third_party_settings: {  }
-    type: datetime_default
     region: content
   field_previous_title:
     weight: 6
@@ -181,4 +162,6 @@ content:
     third_party_settings: {  }
 hidden:
   field_first_issue_date_is_approx: true
+  field_first_issue_sort_date: true
   field_last_issue_date_is_approx: true
+  field_last_issue_sort_date: true
