Make Full HTML default text input

--- a/config-yml/field.field.node.publication.field_last_issue_date.yml
+++ b/config-yml/field.field.node.publication.field_last_issue_date.yml
@@ -12,7 +12,7 @@ field_name: field_last_issue_date
 entity_type: node
 bundle: publication
 label: 'Last Issue Date Range'
-description: 'Last Issue date range help text'
+description: 'Last Issue date help text'
 required: false
 translatable: false
 default_value: {  }
