--- a/config-yml/field.field.node.publication.field_first_issue_date.yml
+++ b/config-yml/field.field.node.publication.field_first_issue_date.yml
@@ -12,7 +12,7 @@ field_name: field_first_issue_date
 entity_type: node
 bundle: publication
 label: 'First Issue Date Range'
-description: 'First Issue date range help text'
+description: 'First Issue date help text'
 required: false
 translatable: false
 default_value: {  }
