--- a/config-yml/core.entity_view_display.node.publication.default.yml
+++ b/config-yml/core.entity_view_display.node.publication.default.yml
@@ -40,12 +40,12 @@ content:
     third_party_settings: {  }
     region: content
   field_credit:
-    weight: 5
+    weight: 16
     label: above
     settings:
-      link_to_entity: false
+      link: true
     third_party_settings: {  }
-    type: string
+    type: entity_reference_label
     region: content
   field_first_issue_approx_date:
     weight: 12
