--- a/config-yml/field.field.node.publication.field_credit.yml
+++ b/config-yml/field.field.node.publication.field_credit.yml
@@ -1,10 +1,11 @@
-uuid: 80a0bad5-0842-4462-9df7-b6e6eb452d2c
+uuid: d95966f7-ccb8-48e2-93ba-1cd7fdc65a74
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_credit
     - node.type.publication
+    - taxonomy.vocabulary.credit
 id: node.publication.field_credit
 field_name: field_credit
 entity_type: node
@@ -15,5 +16,14 @@ required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  handler: 'default:taxonomy_term'
+  handler_settings:
+    target_bundles:
+      credit: credit
+    sort:
+      field: name
+      direction: asc
+    auto_create: true
+    auto_create_bundle: ''
+field_type: entity_reference
