--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -58,10 +58,10 @@ third_party_settings:
       format_type: details
       format_settings:
         label: 'Alternative titles'
-        open: true
         required_fields: true
         id: ''
         classes: ''
+        open: false
       label: 'Alternative titles'
       region: content
     group_g:
@@ -72,10 +72,11 @@ third_party_settings:
       weight: 3
       format_type: details
       format_settings:
+        label: 'Geographic Coverage'
+        required_fields: true
         id: ''
         classes: ''
-        open: true
-        required_fields: true
+        open: false
       label: 'Geographic Coverage'
       region: content
     group_place_of_publication:
